syntax = "proto3";

package connectors.kafka.proto.v1;
option go_package = "connectors/kafkapb";

message SplitState {
  string topic = 1;
  int32 parition = 2;
  int64 offset = 3;
}
